bean-and-bloom/k8s/deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "bean-and-bloom"
  namespace: "bean-and-bloom"
  labels:
    app: "bean-and-bloom"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "bean-and-bloom"
  template:
    metadata:
      labels:
        app: "bean-and-bloom"
    spec:
      containers:
        - name: "bean-and-bloom"
          image: "794934876309.dkr.ecr.us-west-2.amazonaws.com/tanusha-k8s-project:62aeeba76ab76609ba7dfff0281145169327652b"
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: "/api/health"
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: "/api/health"
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 20
      tolerations:
        - key: "name"
          operator: "Equal"
          value: "frontend_group"
          effect: "NoSchedule"
